[package]
name = "unnamedassetProject"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
hyper = { version = "1", features = ["full"] }  # <-- Add this line
